Fixed month select align on Safari

--- a/src/features/title/assets/title.css
+++ b/src/features/title/assets/title.css
@@ -11,6 +11,10 @@
   min-width: 12.5em;
 }
 
+.title__time {
+  display: flex;
+}
+
 .title__left {
   align-items: center;
   display: flex;
